<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeedQuiz</string>
    <string name="new_player">Add player</string>
    <string name="start_new_game">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_questions">Questions</string>
    <string name="name_player1">Name player 1</string>
    <string name="name_player2">Name player 2</string>
    <string name="question_player1">Question player 1</string>
    <string name="question_player2">Question player 2</string>
    <string name="game_menu">Menu</string>
    <string name="game_replay">Replay</string>
    <string name="questions_length">Questions length (s)</string>
    <string name="dark_mode">Dark mode</string>
    <string name="add_question">Add question</string>
    <string name="bt_settings_apply">Apply</string>
    <string name="bt_settings_cancel">Cancel</string>
    <string name="answer_question">Question is true</string>
    <string name="ready_before_questions">Ready ?</string>
    <string name="game_win">Win</string>
    <string name="game_equality">Equality</string>
    <string name="game_lose">Lose</string>
</resources>