<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/new_player" />

    <LinearLayout
        android:id="@+id/linearlayout_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_start_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/start_new_game" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.speedQuiz.TextInputLayer.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_player1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editext_name_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/main_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.speedQuiz.TextInputLayer.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_player2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editext_name_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/main_text_size" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/questions_length"
            android:textSize="@dimen/main_text_size" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_length_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:stepSize="1.0"
            android:value="10.0"
            android:valueFrom="1.0"
            android:valueTo="20.0" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_margin_size"
            android:layout_marginTop="80dp"
            android:checked="true"
            android:text="@string/dark_mode"
            android:textSize="@dimen/main_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_settings_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/main_component_size"
            android:text="@string/bt_settings_apply"
            app:icon="@drawable/ic_check" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_settings_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_component_size"
            android:text="@string/bt_settings_cancel"
            app:icon="@drawable/ic_cancel" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/framelayout_questions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_size"
            android:text="@string/add_question"
            android:textSize="@dimen/main_text_size" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.speedQuiz.TextInputLayer.Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/main_margin_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editext_new_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/main_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_answer_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_margin_size"
            android:layout_marginTop="120dp"
            android:checked="true"
            android:text="@string/answer_question"
            android:textSize="@dimen/main_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_questions_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/main_component_size"
            android:text="@string/bt_settings_apply"
            app:icon="@drawable/ic_check" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_questions_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_component_size"
            android:text="@string/bt_settings_cancel"
            app:icon="@drawable/ic_cancel" />
    </FrameLayout>
</LinearLayout>