<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin_size"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context=".GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_player1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_player1"
        android:orientation="vertical"
        android:textSize="@dimen/game_text_size"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score_player1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="0"
        android:textSize="@dimen/game_score_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/score_player2"
        app:layout_constraintStart_toStartOf="@+id/name_player1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_size"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/score_player2"
        app:layout_constraintStart_toEndOf="@+id/score_player1"
        app:layout_constraintTop_toBottomOf="@id/name_player1" />

    <TextView
        android:id="@+id/question_player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/question_player2"
        android:rotation="180"
        android:textSize="@dimen/game_text_size"
        app:layout_constraintEnd_toEndOf="@id/bt_player2"
        app:layout_constraintStart_toStartOf="@id/bt_player2"
        app:layout_constraintTop_toBottomOf="@id/bt_player2" />


    <TextView
        android:id="@+id/name_player2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_player2"
        android:rotation="180"
        android:textSize="@dimen/game_text_size"
        app:layout_constraintBottom_toBottomOf="@id/score_player2"
        app:layout_constraintEnd_toEndOf="@id/score_player2" />

    <TextView
        android:id="@+id/score_player2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="0"
        android:textSize="@dimen/game_score_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_size"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/name_player2"
        app:layout_constraintEnd_toStartOf="@+id/score_player2"
        app:layout_constraintStart_toEndOf="@+id/score_player1" />

    <TextView
        android:id="@+id/question_player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/question_player1"
        android:textSize="@dimen/game_text_size"
        app:layout_constraintBottom_toTopOf="@id/bt_player1"
        app:layout_constraintEnd_toEndOf="@+id/bt_player1"
        app:layout_constraintStart_toStartOf="@+id/bt_player1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/framelayout_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_game_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="75dp"
            android:text="@string/game_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_game_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:text="@string/game_replay" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>